crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__quantifiers_star.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (identifier)* @items
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "items"
S2 "Test"
S3 "identifier"

[type_defs]
T0 = <Node>
T1 = ArrayStar(T0)  ; <Node>*
T2 = Struct  M0:1  ; { items }

[type_members]
M0: S1 → T1  ; items: T1

[type_names]
N0: S2 → T2  ; Test

[entrypoints]
Test = 01 :: T2

[transitions]
  00   ε                                    ◼

Test:
  01   ε                                    02
  02   ε   [Arr]                            04
  04   ε                                    09, 07
  06                                        ▶
  07   ε   [EndArr Set(M0)]                 06
  09       (identifier) [Push]              13
  11       (identifier) [Push]              13
  13   ε                                    11, 07
