crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__quantifiers_star_nongreedy.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (identifier)*? @items
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "items"
S2 "Test"
S3 "identifier"

[type_defs]
T0 = <Node>
T1 = ArrayStar(T0)  ; <Node>*
T2 = Struct  M0:1  ; { items }

[type_members]
M0: S1 → T1  ; items: T1

[type_names]
N0: S2 → T2  ; Test

[entrypoints]
Test = 01 :: T2

[transitions]
  00   ε                                    ◼

Test:
  01   ε                                    02
  02   ε   [Obj]                            04
  04   ε   [Arr]                            06
  06   ε                                    15, 22
  08  ‼·   (identifier) [Node Push]         10
  10   ε                                    15, 28
  12                                        ▶
  13   ε   [EndObj]                         12
  15   ε   [EndArr Set(M0)]                 13
  17   ▷                                    20
  18   ε                                    15, 17
  20   ε                                    18, 08
  22  ‼·                                    20
  23   ▷                                    26
  24   ε                                    15, 23
  26   ε                                    24, 08
  28   ▷                                    26
