crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__quantifiers_struct_array.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (array {(identifier) @a (number) @b}* @items)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "b"
S3 "items"
S4 "Test"
S5 "array"
S6 "number"
S7 "identifier"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { a, b }
T2 = ArrayStar(T1)  ; T1*
T3 = Struct  M2:1  ; { items }
T4 = Struct  M3:1  ; { a }
T5 = Struct  M4:1  ; { b }

[type_members]
M0: S1 → T0  ; a: <Node>
M1: S2 → T0  ; b: <Node>
M2: S3 → T2  ; items: T2
M3: S1 → T0  ; a: <Node>
M4: S2 → T0  ; b: <Node>

[type_names]
N0: S4 → T3  ; Test

[entrypoints]
Test = 01 :: T3

[transitions]
  00   ε                                    ◼

Test:
  01   ε                                    02
  02   ε   [Obj]                            04
  04       (array)                          05
  05   ε   [Arr]                            07
  07   ε                                    32, 19
  09   ε   [EndArr Set(M2)]                 11
  11   △                                    17
  12   ε   [EndObj Push]                    14
  14   ε                                    38, 09
  16                                        ▶
  17   ε   [EndObj]                         16
  19   ε   [EndArr Set(M2)]                 17
  21   ▷   (number) [Node Set(M1)]          12
  23       (identifier) [Node Set(M0)]      21
  25   ε   [Obj]                            23
  27   ▷                                    30
  28   ε                                    27, 19
  30   ε                                    25, 28
  32   ▽                                    30
  33   ▷                                    36
  34   ε                                    33, 09
  36   ε                                    25, 34
  38   ▷                                    36
