crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__sequences_basic.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (parent {(a) (b)})
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "Test"
S2 "parent"
S3 "b"
S4 "a"

[type_defs]
T0 = <Void>

[type_members]

[type_names]
N0: S1 → T0  ; Test

[entrypoints]
Test = 1 :: T0

[transitions]
  0   ε                                     ◼

Test:
  1   ε                                     2
  2       (parent)                          3
  3   ▽   (a)                               4
  4   ▷   (b)                               5
  5   △                                     6
  6                                         ▶
