crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__sequences_in_quantifier.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (parent {(a) (b)}* @items)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "items"
S2 "Test"
S3 "parent"
S4 "b"
S5 "a"

[type_defs]
T0 = <Node>
T1 = ArrayStar(T0)  ; <Node>*
T2 = Struct  M0:1  ; { items }

[type_members]
M0: S1 → T1  ; items: T1

[type_names]
N0: S2 → T2  ; Test

[entrypoints]
Test = 01 :: T2

[transitions]
  00   ε                                    ◼

Test:
  01   ε                                    02
  02   ε   [Obj]                            04
  04       (parent)                         05
  05   ε   [Arr]                            07
  07   ε                                    19, 15
  09   ε   [EndArr Set(M0)]                 11
  11   △                                    13
  12                                        ▶
  13   ε   [EndObj]                         12
  15   ε   [EndArr Set(M0)]                 13
  17   ▷   (b) [Push]                       23
  19   ▽   (a)                              17
  20   ▷   (b) [Push]                       23
  22   ▷   (a)                              20
  23   ε                                    22, 09
